--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </p>
                 </div>
             </div>
-
+            <div class="weather-forecast" id="forecast"></div>
 
         </main>
 
