--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <footer>
             <p>This project was coded by <a href="https://github.com/Tatiit17" target="_blank">Tati Italmazava🤍</a>
                 , is open-sourced on
-                <a href="https://github.com/Tatiit17/final-weather-app" target="_blank">GitHub</a>
+                <a href="https://github.com/Tatiit17/my-pink-app" target="_blank">GitHub</a>
                 and hosted on
-                <a href="https://tati-meteo-app.netlify.app/" target="_blank">Netlify</a>
+                <a href="hhttps://app.netlify.com/teams/tatiit17/sites" target="_blank">Netlify</a>
             </p>
         </footer>
     </div>
