--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 , is open-sourced on
                 <a href="https://github.com/Tatiit17/my-pink-app" target="_blank">GitHub</a>
                 and hosted on
-                <a href="hhttps://app.netlify.com/teams/tatiit17/sites" target="_blank">Netlify</a>
+                <a href="https://app.netlify.com/teams/tatiit17/overview" target="_blank">Netlify</a>
             </p>
         </footer>
     </div>
